baml_language/crates/baml_tests/snapshots/compiles/lambda_advanced/baml_tests__compiles__lambda_advanced__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
function user.test_apply_twice_inferred() -> int  [expr] {
  { let double = (x: int) -> { {  } x Mul 2 }; let apply_twice = (f: (int) -> int, x: int) -> { {  } f(f(x)) } } apply_twice(double, 3)
}
function user.test_capture_in_map_inferred() -> int[]  [expr] {
  { let items: int[] = [1, 2, 3]; let factor = 10 } items.map((x) -> { {  } x Mul factor })
}
function user.test_capture_lambda_inferred() -> int  [expr] {
  { let multiply = (a: int, b: int) -> { {  } a Mul b }; let double = (x: int) -> { {  } multiply(x, 2) } } double(21)
}
function user.test_chained_map() -> int[]  [expr] {
  { let items: int[] = [1, 2, 3]; let step1: int[] = items.map((x) -> { {  } x Mul 10 }) } step1.map((x) -> { {  } x Add 1 })
}
function user.test_compose_inferred() -> int[]  [expr] {
  { let items: int[] = [1, 2, 3]; let step1: int[] = items.map((x) -> { {  } x Mul 2 }) } step1.map((x) -> { {  } x Add 1 })
}
function user.test_deep_capture() -> int  [expr] {
  { let a = 1; let f = (b: int) -> { { let g = (c: int) -> int { {  } a Add b Add c } } g(100) } } f(10)
}
function user.test_deep_capture_inferred() -> int  [expr] {
  { let a = 1; let f = (b: int) -> { { let g = (c: int) -> { {  } a Add b Add c } } g(100) } } f(10)
}
function user.test_fully_inferred_map() -> int[]  [expr] {
  { let items: int[] = [1, 2, 3] } items.map((x) -> { {  } x Mul 2 })
}
function user.test_generic_apply_inferred() -> int  [expr] {
  { let apply = <T, U>(f: (T) -> U, x: T) -> U { {  } f(x) } } apply((x) -> { {  } x Mul 2 }, 21)
}
function user.test_generic_multi_instantiation() -> int  [expr] {
  { let id = <T>(x: T) -> T { {  } x }; let a: int = id(42); let b: string = id("hello") } a
}
function user.test_higher_order_inferred() -> int  [expr] {
  { let make_adder = (n: int) -> { { let adder = (x: int) -> { {  } x Add n } } adder }; let add5 = make_adder(5) } add5(37)
}
function user.test_higher_order_return() -> int  [expr] {
  { let make_adder = (n: int) -> { { let adder = (x: int) -> int { {  } x Add n } } adder }; let add5 = make_adder(5) } add5(37)
}
function user.test_iife() -> int  [expr] {
  { let result = (x: int) -> int { {  } x Mul x }(7) } result
}
function user.test_iife_inferred() -> int  [expr] {
  {  } (x: int) -> { {  } x Mul x }(7)
}
function user.test_lambda_calling_lambda() -> int  [expr] {
  { let double = (x: int) -> int { {  } x Mul 2 }; let apply_twice = (f: (int) -> int, x: int) -> int { {  } f(f(x)) } } apply_twice(double, 3)
}
function user.test_lambda_in_match_inferred() -> int  [expr] {
  { let op = "double"; let f = match (op) { "double" => (x: int) -> { {  } x Mul 2 }, "negate" => (x: int) -> { {  } 0 Sub x }, _ => (x: int) -> { {  } x } } } f(21)
}
function user.test_lambda_variable_then_pass() -> int[]  [expr] {
  { let items: int[] = [10, 20, 30]; let halve = (x: int) -> int { {  } x Div 2 } } items.map(halve)
}
function user.test_lambda_with_if() -> string  [expr] {
  { let classify = (n: int) -> string { {  } if (n Lt 0) {  } "negative" else if (n Eq 0) {  } "zero" else {  } "positive" } } classify(Neg 5)
}
function user.test_lambda_with_match() -> string  [expr] {
  { let describe = (n: int) -> string { {  } match (n) { 0 => "zero", 1 => "one", _ => "many" } } } describe(1)
}
function user.test_literal_return_inference() -> int[]  [expr] {
  { let items: int[] = [1, 2, 3] } items.map((x) -> { {  } 0 })
}
function user.test_map_multi_statement() -> int[]  [expr] {
  { let items: int[] = [1, 2, 3] } items.map((x) -> { { let doubled = x Mul 2; let offset = 100 } doubled Add offset })
}
function user.test_map_optional_inferred() -> int[]  [expr] {
  { let items: int?[] = [1, null, 3] } items.map((x) -> { {  } match (x) { null => 0, _ => 1 } })
}
function user.test_map_string_to_int() -> int[]  [expr] {
  { let words: string[] = ["hello", "world"] } words.map((w: string) -> int { {  } w.length() })
}
function user.test_map_type_change_inferred() -> string[]  [expr] {
  { let nums: int[] = [1, 2, 3] } nums.map((n) -> { {  } match (n) { 1 => "one", 2 => "two", _ => "other" } })
}
function user.test_map_with_capture() -> int[]  [expr] {
  { let items: int[] = [1, 2, 3]; let factor = 10 } items.map((x) -> { {  } x Mul factor })
}
function user.test_nested_map() -> int[][]  [expr] {
  { let matrix: int[][] = [[1, 2], [3, 4]] } matrix.map((row: int[]) -> { {  } row.map((x) -> { {  } x Mul x }) })
}
function user.test_optional_return() -> int?  [expr] {
  { let maybe = (x: int) -> int? { {  } if (x Gt 0) {  } x else {  } null } } maybe(Neg 1)
}
function user.test_shadowing() -> string  [expr] {
  { let x = "999"; let items: int[] = [1, 2, 3]; let mapped: int[] = items.map((x) -> { {  } x Add 1 }); for y in mapped { let i = 0; while i Lt y { x Add= "1"; i Add= 1 } } } x
}
function user.test_shadowing_inferred() -> int[]  [expr] {
  { let x = "not a number"; let items: int[] = [1, 2, 3] } items.map((x) -> { {  } x Add 1 })
}
function user.test_two_transforms_inferred() -> int  [expr] {
  { let apply_both = (f: (int) -> int, g: (int) -> int, x: int) -> { {  } g(f(x)) } } apply_both((x: int) -> { {  } x Mul 2 }, (x: int) -> { {  } x Add 10 }, 5)
}
function user.test_void_lambda_inferred() -> int  [expr] {
  { let count = 0; let inc = () -> { { count Add= 1 } }; inc(); inc() } count
}
function user.test_void_lambda_inferred_captures() -> int  [expr] {
  { let inc = () -> { { let count = 0; let inc = () -> { { count Add= 1 } count } } inc }(); inc(); inc() } inc()
}

--- captures ---
lambda (x) in ?: captures [n]
lambda (c) in ?: captures [a, b]
lambda (x) in test_map_with_capture: captures [factor]
lambda (x) in ?: captures [n]
lambda (c) in ?: captures [a, b]
lambda (x) in test_capture_in_map_inferred: captures [factor]
lambda () in test_void_lambda_inferred: captures [count]
lambda () in ?: captures [count]
lambda (x) in test_capture_lambda_inferred: captures [multiply]
