baml_language/crates/baml_tests/snapshots/compiles/lambda_advanced/baml_tests__compiles__lambda_advanced__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 9275
---
=== TIR2 ===
function user.test_chained_map() -> int[] throws never {
  { : int[]
    let items: int[] = [1, 2, 3] : int[]
    let step1: int[] = items.map<U, E>((x) -> { ... }) : int[]
    step1.map<U, E>((x) -> { ... }) : int[]
      (x) -> { ... } : (x: int) -> int throws E
        {
          x + 1
        }
  }
}
lambda user.test_chained_map {
}
lambda user.test_chained_map {
}
function user.test_map_string_to_int() -> int[] throws never {
  { : int[]
    let words: string[] = ["hello", "world"] : string[]
    words.map<U, E>((w: string) -> int { ... }) : int[]
      (w: string) -> int { ... } : (w: string) -> int throws E
        {
          w.length()
        }
  }
}
lambda user.test_map_string_to_int {
}
function user.test_higher_order_return() -> int throws never {
  { : int
    let make_adder = : (n: int) -> ((x: int) -> int throws never) throws never
      (n: int) -> { ... } : (n: int) -> ((x: int) -> int throws never) throws never
        {
          let adder = ...
            (x: int) -> int { ... }
              {
                x + n
              }
          adder
        }
    let add5 = make_adder(5) : (x: int) -> int throws never
    add5(37) : int
  }
}
lambda user.test_higher_order_return {
}
lambda user.test_higher_order_return {
}
function user.test_lambda_calling_lambda() -> int throws never {
  { : int
    let double = : (x: int) -> int throws never
      (x: int) -> int { ... } : (x: int) -> int throws never
        {
          x * 2
        }
    let apply_twice = : (f: (int) -> int throws never, x: int) -> int throws never
      (f: (int) -> int, x: int) -> int { ... } : (f: (int) -> int throws never, x: int) -> int throws never
        {
          f(f(x))
        }
    apply_twice(double, 3) : int
  }
}
lambda user.test_lambda_calling_lambda {
}
lambda user.test_lambda_calling_lambda {
}
function user.test_deep_capture() -> int throws never {
  { : int
    let a = 1 : 1 -> int
    let f = : (b: int) -> int throws never
      (b: int) -> { ... } : (b: int) -> int throws never
        {
          let g = ...
            (c: int) -> int { ... }
              {
                a + b + c
              }
          g(100)
        }
    f(10) : int
  }
}
lambda user.test_deep_capture {
}
lambda user.test_deep_capture {
}
function user.test_generic_multi_instantiation() -> int throws never {
  { : int | 42
    let id = : (x: T) -> T throws never
      <T>(x: T) -> T { ... } : (x: T) -> T throws never
        {
          x
        }
    let a: int = id<T>(42) : int | 42
    let b: string = id<T>("hello") : string | "hello"
    a : int | 42
  }
}
lambda user.test_generic_multi_instantiation {
}
function user.test_lambda_with_match() -> string throws never {
  { : string
    let describe = : (n: int) -> string throws never
      (n: int) -> string { ... } : (n: int) -> string throws never
        {
          match (n) { 0 => "zero", 1 => "one", _ => "many" }
        }
    describe(1) : string
  }
}
lambda user.test_lambda_with_match {
}
function user.test_lambda_with_if() -> string throws never {
  { : string
    let classify = : (n: int) -> string throws never
      (n: int) -> string { ... } : (n: int) -> string throws never
        {
          if (n < 0)
            {
              "negative"
            }
          else
            if (n == 0)
              {
                "zero"
              }
            else
              {
                "positive"
              }
        }
    classify(Neg 5) : string
  }
}
lambda user.test_lambda_with_if {
}
function user.test_map_with_capture() -> int[] throws never {
  { : int[]
    let items: int[] = [1, 2, 3] : int[]
    let factor = 10 : 10 -> int
    items.map<U, E>((x) -> { ... }) : int[]
      (x) -> { ... } : (x: int) -> int throws E
        {
          x * factor
        }
  }
}
lambda user.test_map_with_capture {
}
function user.test_nested_map() -> int[][] throws never {
  { : int[][]
    let matrix: int[][] = [[1, 2], [3, 4]] : int[][]
    matrix.map<U, E>((row: int[]) -> { ... }) : int[][]
      (row: int[]) -> { ... } : (row: int[]) -> int[] throws E
        {
          row.map((x) -> { ... })
        }
  }
}
lambda user.test_nested_map {
}
lambda user.test_nested_map {
}
function user.test_map_multi_statement() -> int[] throws never {
  { : int[]
    let items: int[] = [1, 2, 3] : int[]
    items.map<U, E>((x) -> { ... }) : int[]
      (x) -> { ... } : (x: int) -> int throws E
        {
          let doubled = x * 2
          let offset = 100
          doubled + offset
        }
  }
}
lambda user.test_map_multi_statement {
}
function user.test_lambda_variable_then_pass() -> int[] throws never {
  { : int[]
    let items: int[] = [10, 20, 30] : int[]
    let halve = : (x: int) -> int throws never
      (x: int) -> int { ... } : (x: int) -> int throws never
        {
          x / 2
        }
    items.map<U, E>(halve) : int[]
  }
}
lambda user.test_lambda_variable_then_pass {
}
function user.test_shadowing() -> string throws never {
  { : string
    let x = "999" : "999" -> string
    let items: int[] = [1, 2, 3] : int[]
    let mapped: int[] = items.map<U, E>((x) -> { ... }) : int[]
    for y in mapped
      { : void
        let i = 0 : 0 -> int
        while i < y
          { : void
            x Add= "1" : string
            i Add= 1 : int
          }
      }
    x : string
  }
}
lambda user.test_shadowing {
}
function user.test_iife() -> int throws never {
  { : int
    let result = (x: int) -> int { ... }(7) : int
    result : int
  }
}
lambda user.test_iife {
}
function user.test_optional_return() -> int? throws never {
  { : int?
    let maybe = : (x: int) -> int? throws never
      (x: int) -> int? { ... } : (x: int) -> int? throws never
        {
          if (x > 0)
            {
              x
            }
          else
            {
              null
            }
        }
    maybe(Neg 1) : int?
  }
}
lambda user.test_optional_return {
}
function user.test_fully_inferred_map() -> int[] throws never {
  { : int[]
    let items: int[] = [1, 2, 3] : int[]
    items.map<U, E>((x) -> { ... }) : int[]
      (x) -> { ... } : (x: int) -> int throws E
        {
          x * 2
        }
  }
}
lambda user.test_fully_inferred_map {
}
function user.test_map_type_change_inferred() -> string[] throws never {
  { : string[]
    let nums: int[] = [1, 2, 3] : int[]
    nums.map<U, E>((n) -> { ... }) : string[]
      (n) -> { ... } : (n: int) -> string throws E
        {
          match (n) { 1 => "one", 2 => "two", _ => "other" }
        }
  }
}
lambda user.test_map_type_change_inferred {
}
function user.test_literal_return_inference() -> int[] throws never {
  { : int[]
    let items: int[] = [1, 2, 3] : int[]
    items.map<U, E>((x) -> { ... }) : int[]
      (x) -> { ... } : (x: int) -> int throws E
        {
          0
        }
  }
}
lambda user.test_literal_return_inference {
}
function user.test_compose_inferred() -> int[] throws never {
  { : int[]
    let items: int[] = [1, 2, 3] : int[]
    let step1: int[] = items.map<U, E>((x) -> { ... }) : int[]
    step1.map<U, E>((x) -> { ... }) : int[]
      (x) -> { ... } : (x: int) -> int throws E
        {
          x + 1
        }
  }
}
lambda user.test_compose_inferred {
}
lambda user.test_compose_inferred {
}
function user.test_higher_order_inferred() -> int throws never {
  { : int
    let make_adder = : (n: int) -> ((x: int) -> int throws never) throws never
      (n: int) -> { ... } : (n: int) -> ((x: int) -> int throws never) throws never
        {
          let adder = ...
            (x: int) -> { ... }
              {
                x + n
              }
          adder
        }
    let add5 = make_adder(5) : (x: int) -> int throws never
    add5(37) : int
  }
}
lambda user.test_higher_order_inferred {
}
lambda user.test_higher_order_inferred {
}
function user.test_apply_twice_inferred() -> int throws never {
  { : int
    let double = : (x: int) -> int throws never
      (x: int) -> { ... } : (x: int) -> int throws never
        {
          x * 2
        }
    let apply_twice = : (f: (int) -> int throws never, x: int) -> int throws never
      (f: (int) -> int, x: int) -> { ... } : (f: (int) -> int throws never, x: int) -> int throws never
        {
          f(f(x))
        }
    apply_twice(double, 3) : int
  }
}
lambda user.test_apply_twice_inferred {
}
lambda user.test_apply_twice_inferred {
}
function user.test_deep_capture_inferred() -> int throws never {
  { : int
    let a = 1 : 1 -> int
    let f = : (b: int) -> int throws never
      (b: int) -> { ... } : (b: int) -> int throws never
        {
          let g = ...
            (c: int) -> { ... }
              {
                a + b + c
              }
          g(100)
        }
    f(10) : int
  }
}
lambda user.test_deep_capture_inferred {
}
lambda user.test_deep_capture_inferred {
}
function user.test_generic_apply_inferred() -> int throws never {
  { : int
    let apply = : (f: (T) -> U throws never, x: T) -> U throws never
      <T, U>(f: (T) -> U, x: T) -> U { ... } : (f: (T) -> U throws never, x: T) -> U throws never
        {
          f(x)
        }
    apply<T, U>((x) -> { ... }, 21) : int
      (x) -> { ... } : (x: 21) -> int throws never
        {
          x * 2
        }
  }
}
lambda user.test_generic_apply_inferred {
}
lambda user.test_generic_apply_inferred {
}
function user.test_two_transforms_inferred() -> int throws never {
  { : int
    let apply_both = : (f: (int) -> int throws never, g: (int) -> int throws never, x: int) -> int throws never
      (f: (int) -> int, g: (int) -> int, x: int) -> { ... } : (f: (int) -> int throws never, g: (int) -> int throws never, x: int) -> int throws never
        {
          g(f(x))
        }
    apply_both((x: int) -> { ... }, (x: int) -> { ... }, 5) : int
      (x: int) -> { ... } : (x: int) -> int throws never
        {
          x * 2
        }
      (x: int) -> { ... } : (x: int) -> int throws never
        {
          x + 10
        }
  }
}
lambda user.test_two_transforms_inferred {
}
lambda user.test_two_transforms_inferred {
}
lambda user.test_two_transforms_inferred {
}
function user.test_lambda_in_match_inferred() -> int throws never {
  { : int
    let op = "double" : "double" -> string
    let f = : (x: int) -> int throws never
      match (op : string) : (x: int) -> int throws never
        "double" =>
          (x: int) -> { ... } : (x: int) -> int throws never
            {
              x * 2
            }
        "negate" =>
          (x: int) -> { ... } : (x: int) -> int throws never
            {
              0 - x
            }
        _ =>
          (x: int) -> { ... } : (x: int) -> int throws never
            {
              x
            }
    f(21) : int
  }
}
lambda user.test_lambda_in_match_inferred {
}
lambda user.test_lambda_in_match_inferred {
}
lambda user.test_lambda_in_match_inferred {
}
function user.test_capture_in_map_inferred() -> int[] throws never {
  { : int[]
    let items: int[] = [1, 2, 3] : int[]
    let factor = 10 : 10 -> int
    items.map<U, E>((x) -> { ... }) : int[]
      (x) -> { ... } : (x: int) -> int throws E
        {
          x * factor
        }
  }
}
lambda user.test_capture_in_map_inferred {
}
function user.test_void_lambda_inferred() -> int throws never {
  { : int
    let count = 0 : 0 -> int
    let inc = : () -> void throws never
      () -> { ... } : () -> void throws never
        {
          count Add= 1
        }
    inc() : void
    inc() : void
    count : int
  }
}
lambda user.test_void_lambda_inferred {
}
function user.test_void_lambda_inferred_captures() -> int throws never {
  { : int
    let inc = () -> { ... }() : () -> int throws never
    inc() : int
    inc() : int
    inc() : int
  }
}
lambda user.test_void_lambda_inferred_captures {
}
lambda user.test_void_lambda_inferred_captures {
}
function user.test_capture_lambda_inferred() -> int throws never {
  { : int
    let multiply = : (a: int, b: int) -> int throws never
      (a: int, b: int) -> { ... } : (a: int, b: int) -> int throws never
        {
          a * b
        }
    let double = : (x: int) -> int throws never
      (x: int) -> { ... } : (x: int) -> int throws never
        {
          multiply(x, 2)
        }
    double(21) : int
  }
}
lambda user.test_capture_lambda_inferred {
}
lambda user.test_capture_lambda_inferred {
}
function user.test_map_optional_inferred() -> int[] throws never {
  { : int[]
    let items: int?[] = [1, null, 3] : int?[]
    items.map<U, E>((x) -> { ... }) : int[]
      (x) -> { ... } : (x: int?) -> int throws E
        {
          match (x) { null => 0, _ => 1 }
        }
  }
}
lambda user.test_map_optional_inferred {
}
function user.test_shadowing_inferred() -> int[] throws never {
  { : int[]
    let x = "not a number" : "not a number" -> string
    let items: int[] = [1, 2, 3] : int[]
    items.map<U, E>((x) -> { ... }) : int[]
      (x) -> { ... } : (x: int) -> int throws E
        {
          x + 1
        }
  }
}
lambda user.test_shadowing_inferred {
}
function user.test_iife_inferred() -> int throws never {
  { : int
    (x: int) -> { ... }(7) : int
  }
}
lambda user.test_iife_inferred {
}
