baml_language/crates/baml_tests/snapshots/compiles/lambda_advanced/baml_tests__compiles__lambda_advanced__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.test_apply_twice_inferred() -> int {
    make_closure .<lambda(test_apply_twice_inferred, 0)>, 0
    load_const 3
    make_closure .<lambda(test_apply_twice_inferred, 1)>, 0
    call_indirect
    return
}

function user.test_capture_in_map_inferred() -> int[] {
    load_var ?1
    make_cell
    store_var ?1
    load_const 10
    store_deref ?1
    load_const 1
    load_const 2
    load_const 3
    alloc_array 3
    load_var factor
    make_closure .<lambda(test_capture_in_map_inferred, 0)>, 1
    call baml.Array.map
    return
}

function user.test_capture_lambda_inferred() -> int {
    load_var ?1
    make_cell
    store_var ?1
    make_closure .<lambda(test_capture_lambda_inferred, 0)>, 0
    store_deref ?1
    load_const 21
    load_var multiply
    make_closure .<lambda(test_capture_lambda_inferred, 1)>, 1
    call_indirect
    return
}

function user.test_chained_map() -> int[] {
    load_const 1
    load_const 2
    load_const 3
    alloc_array 3
    make_closure .<lambda(test_chained_map, 0)>, 0
    call baml.Array.map
    make_closure .<lambda(test_chained_map, 1)>, 0
    call baml.Array.map
    return
}

function user.test_compose_inferred() -> int[] {
    load_const 1
    load_const 2
    load_const 3
    alloc_array 3
    make_closure .<lambda(test_compose_inferred, 0)>, 0
    call baml.Array.map
    make_closure .<lambda(test_compose_inferred, 1)>, 0
    call baml.Array.map
    return
}

function user.test_deep_capture() -> int {
    load_var ?1
    make_cell
    store_var ?1
    load_const 1
    store_deref ?1
    load_const 10
    load_var a
    make_closure .<lambda(test_deep_capture, 0)>, 1
    call_indirect
    return
}

function user.test_deep_capture_inferred() -> int {
    load_var ?1
    make_cell
    store_var ?1
    load_const 1
    store_deref ?1
    load_const 10
    load_var a
    make_closure .<lambda(test_deep_capture_inferred, 0)>, 1
    call_indirect
    return
}

function user.test_fully_inferred_map() -> int[] {
    load_const 1
    load_const 2
    load_const 3
    alloc_array 3
    make_closure .<lambda(test_fully_inferred_map, 0)>, 0
    call baml.Array.map
    return
}

function user.test_generic_apply_inferred() -> int {
    make_closure .<lambda(test_generic_apply_inferred, 1)>, 0
    load_const 21
    make_closure .<lambda(test_generic_apply_inferred, 0)>, 0
    call_indirect
    return
}

function user.test_generic_multi_instantiation() -> int {
    make_closure .<lambda(test_generic_multi_instantiation, 0)>, 0
    store_var id
    load_const 42
    load_var id
    call_indirect
    store_var a
    load_const "hello"
    load_var id
    call_indirect
    store_var b
    load_var a
    return
}

function user.test_higher_order_inferred() -> int {
    load_const 5
    make_closure .<lambda(test_higher_order_inferred, 0)>, 0
    call_indirect
    store_var add5
    load_const 37
    load_var add5
    call_indirect
    return
}

function user.test_higher_order_return() -> int {
    load_const 5
    make_closure .<lambda(test_higher_order_return, 0)>, 0
    call_indirect
    store_var add5
    load_const 37
    load_var add5
    call_indirect
    return
}

function user.test_iife() -> int {
    load_const 7
    make_closure .<lambda(test_iife, 0)>, 0
    call_indirect
    return
}

function user.test_iife_inferred() -> int {
    load_const 7
    make_closure .<lambda(test_iife_inferred, 0)>, 0
    call_indirect
    return
}

function user.test_lambda_calling_lambda() -> int {
    make_closure .<lambda(test_lambda_calling_lambda, 0)>, 0
    load_const 3
    make_closure .<lambda(test_lambda_calling_lambda, 1)>, 0
    call_indirect
    return
}

function user.test_lambda_in_match_inferred() -> int {
    load_const "double"
    load_const "double"
    cmp_op ==
    pop_jump_if_false L0
    jump L3

  L0:
    load_const "double"
    load_const "negate"
    cmp_op ==
    pop_jump_if_false L1
    jump L2

  L1:
    make_closure .<lambda(test_lambda_in_match_inferred, 2)>, 0
    store_var f
    jump L4

  L2:
    make_closure .<lambda(test_lambda_in_match_inferred, 1)>, 0
    store_var f
    jump L4

  L3:
    make_closure .<lambda(test_lambda_in_match_inferred, 0)>, 0
    store_var f

  L4:
    load_const 21
    load_var f
    call_indirect
    return
}

function user.test_lambda_variable_then_pass() -> int[] {
    load_const 10
    load_const 20
    load_const 30
    alloc_array 3
    make_closure .<lambda(test_lambda_variable_then_pass, 0)>, 0
    call baml.Array.map
    return
}

function user.test_lambda_with_if() -> string {
    load_const -5
    make_closure .<lambda(test_lambda_with_if, 0)>, 0
    call_indirect
    return
}

function user.test_lambda_with_match() -> string {
    load_const 1
    make_closure .<lambda(test_lambda_with_match, 0)>, 0
    call_indirect
    return
}

function user.test_literal_return_inference() -> int[] {
    load_const 1
    load_const 2
    load_const 3
    alloc_array 3
    make_closure .<lambda(test_literal_return_inference, 0)>, 0
    call baml.Array.map
    return
}

function user.test_map_multi_statement() -> int[] {
    load_const 1
    load_const 2
    load_const 3
    alloc_array 3
    make_closure .<lambda(test_map_multi_statement, 0)>, 0
    call baml.Array.map
    return
}

function user.test_map_optional_inferred() -> int[] {
    load_const 1
    load_const null
    load_const 3
    alloc_array 3
    make_closure .<lambda(test_map_optional_inferred, 0)>, 0
    call baml.Array.map
    return
}

function user.test_map_string_to_int() -> int[] {
    load_const "hello"
    load_const "world"
    alloc_array 2
    make_closure .<lambda(test_map_string_to_int, 0)>, 0
    call baml.Array.map
    return
}

function user.test_map_type_change_inferred() -> string[] {
    load_const 1
    load_const 2
    load_const 3
    alloc_array 3
    make_closure .<lambda(test_map_type_change_inferred, 0)>, 0
    call baml.Array.map
    return
}

function user.test_map_with_capture() -> int[] {
    load_var ?1
    make_cell
    store_var ?1
    load_const 10
    store_deref ?1
    load_const 1
    load_const 2
    load_const 3
    alloc_array 3
    load_var factor
    make_closure .<lambda(test_map_with_capture, 0)>, 1
    call baml.Array.map
    return
}

function user.test_nested_map() -> int[][] {
    load_const 1
    load_const 2
    alloc_array 2
    load_const 3
    load_const 4
    alloc_array 2
    alloc_array 2
    make_closure .<lambda(test_nested_map, 0)>, 0
    call baml.Array.map
    return
}

function user.test_optional_return() -> int? {
    load_const -1
    make_closure .<lambda(test_optional_return, 0)>, 0
    call_indirect
    return
}

function user.test_shadowing() -> string {
    load_const "999"
    store_var x
    load_const 1
    load_const 2
    load_const 3
    alloc_array 3
    make_closure .<lambda(test_shadowing, 0)>, 0
    call baml.Array.map
    store_var _5
    load_const 0
    store_var __for_idx

  L0:
    load_var __for_idx
    load_var _5
    call baml.Array.length
    cmp_op <
    pop_jump_if_false L1
    jump L2

  L1:
    load_var x
    return

  L2:
    load_var _5
    load_var __for_idx
    load_array_element
    store_var y
    load_const 0
    store_var i

  L3:
    load_var i
    load_var y
    cmp_op <
    pop_jump_if_false L4
    jump L5

  L4:
    load_var __for_idx
    load_const 1
    bin_op +
    store_var __for_idx
    jump L0

  L5:
    load_var x
    load_const "1"
    bin_op +
    store_var x
    load_var i
    load_const 1
    bin_op +
    store_var i
    jump L3
}

function user.test_shadowing_inferred() -> int[] {
    load_const 1
    load_const 2
    load_const 3
    alloc_array 3
    make_closure .<lambda(test_shadowing_inferred, 0)>, 0
    call baml.Array.map
    return
}

function user.test_two_transforms_inferred() -> int {
    make_closure .<lambda(test_two_transforms_inferred, 1)>, 0
    make_closure .<lambda(test_two_transforms_inferred, 2)>, 0
    load_const 5
    make_closure .<lambda(test_two_transforms_inferred, 0)>, 0
    call_indirect
    return
}

function user.test_void_lambda_inferred() -> int {
    load_var ?1
    make_cell
    store_var ?1
    load_const 0
    store_deref ?1
    load_var count
    make_closure .<lambda(test_void_lambda_inferred, 0)>, 1
    store_var inc
    load_var inc
    call_indirect
    pop 1
    load_var inc
    call_indirect
    pop 1
    load_deref ?1
    return
}

function user.test_void_lambda_inferred_captures() -> int {
    make_closure .<lambda(test_void_lambda_inferred_captures, 0)>, 0
    call_indirect
    store_var inc
    load_var inc
    call_indirect
    pop 1
    load_var inc
    call_indirect
    pop 1
    load_var inc
    call_indirect
    return
}
